# smart-house

./: .env  .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml  clippy.yaml
config/src/: lib.rs
config_simple/: Cargo.toml  README.md
config_simple/src/: config_server.rs  lib.rs
http_server/: Cargo.toml
http_server/src/: error.rs  main.rs
http_server/src/controllers/: apartment.rs  device.rs  house.rs  mod.rs  rosette.rs  thermometer.rs
http_server/src/domain/: apartment.rs  device.rs  house.rs  mod.rs  rosette.rs  thermometer.rs
http_server/src/mongo/: apartment.rs  house.rs  mod.rs  rosette.rs  thermometer.rs
http_server/src/routing/: apartment.rs  house.rs  mod.rs  rosette.rs  thermometer.rs
smart_house/: Cargo.toml  README.md
smart_house/examples/: rosette_sync.rs  simple_house.rs  thermometer_async.rs  thermometer_sync.rs
smart_house/src/: errors.rs  lib.rs  main.rs
smart_house/src/errors/: mod.rs
smart_house/src/house/: mod.rs
smart_house/src/house/apartment/: mod.rs
smart_house/src/house/apartment/device/: mod.rs  rosette.rs  thermometer.rs
smart_house/src/house/apartment/device/rosette/: mod.rs
smart_house/src/house/apartment/device/thermometer/: mod.rs
smart_house/tests/: integration_test.rs
smart_house_gui/: Cargo.toml  README.md
smart_house_gui/src/: apartment.rs  api.rs  house.rs  main.rs  rosette.rs  style.rs  thermometer.rs
smart_house_lib/: Cargo.toml  README.md
smart_house_lib/examples/: rosette_sync.rs  simple_house.rs  thermometer_async.rs  thermometer_sync.rs
smart_house_lib/src/: c_interface.rs  lib.rs
smart_house_lib/src/house/: mod.rs
smart_house_lib/src/house/apartment/: mod.rs
smart_house_lib/src/house/apartment/device/: mod.rs  rosette.rs  thermometer.rs
smart_house_lib/tests/: integration_test.rs
smart_house_tui/: Cargo.toml
smart_house_tui/src/: main.rs
smart_rosette/: Cargo.toml  README.md
smart_rosette/examples/: rosette_async.rs  rosette_sync.rs
smart_rosette/src/: lib.rs  main.rs  mod.rs  routing.rs
smart_rosette/src/config/: mod.rs
smart_rosette/src/domain/: mod.rs  rosette.rs
smart_rosette/src/rosette/: mod.rs  rosette_controller.rs  rosette_service.rs
smart_rosette/src/server/: mod.rs  routing.rs
smart_rosette/src/server/controller/: mod.rs  rosette.rs
smart_rosette_async/: Cargo.toml
smart_thermometer/: Cargo.toml  README.md
smart_thermometer/examples/: thermometer_sync.rs
smart_thermometer/src/: handle.rs  lib.rs  main.rs  server.rs
src/: lib.rs  main.rs
src/errors/: mod.rs
src/house/: mod.rs
src/house/apartment/: mod.rs
src/house/apartment/device/: mod.rs
src/house/apartment/device/rosette/: mod.rs
src/house/apartment/device/thermometer/: mod.rs
src/result/: mod.rs
tcp/: Cargo.toml
tcp/examples/: async_client.rs  async_server.rs
tcp/src/: client.rs  error.rs  lib.rs  server.rs
tcp/src/async_mod/: client.rs  mod.rs  server.rs
tcp_server/: Cargo.toml
tcp_server/examples/: example-server.rs
tcp_server/src/: lib.rs  routing.rs  server.rs  server_async.rs  tcp_request.rs
tcp_wrapper/: Cargo.toml  README.md
tcp_wrapper/examples/: async_client.rs  async_server.rs
tcp_wrapper/src/: client.rs  error.rs  lib.rs  server.rs
tcp_wrapper/src/async_mod/: client.rs  mod.rs  server.rs
tcp_wrapper/src/stream/: mod.rs  stream_async.rs  stream_std.rs
tcp_wrapper/src/tcp_client/: client_async.rs  client_std.rs  mod.rs
tcp_wrapper/src/tcp_server/: mod.rs
tcp_wrapper/src/tcp_server/server_async/: connection_async.rs  mod.rs
tcp_wrapper/src/tcp_server/server_std/: connection_std.rs  mod.rs
tests/: integration_test.rs
udp/: Cargo.toml
udp/src/: client.rs  lib.rs  main.rs  server.rs  socket.rs
udp_wrapper/: Cargo.toml  README.md
udp_wrapper/examples/: udp_async.rs
udp_wrapper/src/: client.rs  error.rs  lib.rs  pusher.rs  server.rs  socket.rs
