[package]
name = "smart_house"
version = "0.1.0"
edition = "2021"
authors = ["Zhuravlev Maksim <zhuravlevma00@gmail.com>"]
description = "It's a simple library to course OTUS Rust developer"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
