[package]
name = "http_server"
version = "0.1.0"
edition = "2021"
authors = ["Zhuravlev Maksim <monge.gaspard.1746@gmail.com>"]
description = "Actix web server"
license = "MIT OR Apache-2.0"
rust-version = "1.56"
readme = "README.md"
repository = "https://github.com/zhuravlevma/smart-house-lib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-rc.1"
env_logger = "0.9.0"
futures = "0.3.19"
log = "0.4.14"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
thiserror = "1.0.30"
mongodb = "2.1.0"
dotenv = "0.15.0"
smart_house_lib = {path = "../smart_house_lib" }
