[package]
name = "smart_house_gui"
version = "0.1.0"
edition = "2021"
authors = ["Zhuravlev Maksim <monge.gaspard.1746@gmail.com>"]
description = "It's a gui to smart_house"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.3"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.136", features = ["derive"] }
smart_house = { path = "../smart_house" }