[package]
name = "smart_house_lib"
version = "0.3.2"
edition = "2021"
authors = ["Zhuravlev Maksim <monge.gaspard.1746@gmail.com>"]
description = "It's a simple library to course OTUS Rust developer"
license = "MIT OR Apache-2.0"
rust-version = "1.56"
readme = "README.md"
repository = "https://github.com/zhuravlevma/smart-house-lib"
keywords = ["smart_house", "house_lib"]
homepage = "https://github.com/zhuravlevma"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[dependencies]
log = "0.4.14"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0.30"
udp_wrapper = "0.2.1"
tcp_wrapper = "0.2.2"
serde = { version = "1.0.136", features = ["derive"] }