[package]
name = "smart_rosette"
version = "0.1.0"
edition = "2021"
authors = ["Zhuravlev Maksim <monge.gaspard.1746@gmail.com>"]
description = "It's a simple rosette server to smart_house"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tcp_wrapper = {path = "../tcp_wrapper"}
config_simple = { path = "../config_simple" }
tokio = { version = "1.16.1", features = ["full"] }
tcp_server = { path = "../tcp_server" }