[package]
name = "tcp_wrapper"
version = "0.2.0"
edition = "2021"
authors = ["Zhuravlev Maksim <monge.gaspard.1746@gmail.com>"]
description = "It's a simple library to smart_house"
license = "MIT OR Apache-2.0"
rust-version = "1.56"
readme = "README.md"
repository = "https://github.com/zhuravlevma/smart-house-lib"
categories = ["network-programming"]
keywords = ["tcp", "wrapper", "tcp_wrapper"]
homepage = "https://github.com/zhuravlevma"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.30"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.136", features = ["derive"] }
log = "0.4.14"