[package]
name = "udp_wrapper"
version = "0.2.0"
edition = "2021"
authors = ["Zhuravlev Maksim <monge.gaspard.1746@gmail.com>"]
description = "It's a simple library to smart_house"
license = "MIT OR Apache-2.0"
rust-version = "1.56"
readme = "README.md"
repository = "https://github.com/zhuravlevma/smart-house-lib"
categories = ["network-programming"]
keywords = ["udp", "udp_library", "udp_wrapper", "wrapper"]
homepage = "https://github.com/zhuravlevma"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
thiserror = "1.0.30"